# gl_template

./: CMakeLists.txt  README.md  gl_program_wrapper.cpp  gl_program_wrapper.hpp  main.cpp  scene.cpp  scene.hpp
shader/: test.frag  test.vert
